src/test/ui/span/E0072.stderr
error[E0072]: recursive type `ListNode` has infinite size
  --> $DIR/E0072.rs:11:1
   |
11 | struct ListNode {
   | ^^^^^^^^^^^^^^^ recursive type has infinite size
   |
   = help: insert indirection (e.g., a `Box`, `Rc`, or `&`) at some point to make `ListNode` representable

error: aborting due to previous error

